--- a/html/pdfjs/web/viewer.css
+++ b/html/pdfjs/web/viewer.css
@@ -407,10 +407,19 @@ select {
   cursor: default;
 }
 
+#rmiPanel {
+    width: 25%;
+    height: 100%;
+    position: relative;
+    float: left;
+    background-color: lightblue;
+}
+
 #outerContainer {
-  width: 100%;
+  width: 75%;
   height: 100%;
   position: relative;
+  float: right;
 }
 
 #sidebarContainer {
